tests/neg/semantic_return_type_mismatch.baa
// EXPECT: نوع الإرجاع غير متوافق
نص د() {
    إرجع ٠.
}

